[package]
name = "erasure-isa-l-sys"
version = "1.0.0"
edition = "2024"
description = "FFI bindings to the isa-l library"
repository = "https://github.com/LokyinZHAO/erasure-isa-l-sys"
readme = "README.md"
license = "MIT"
categories = ["api-bindings", "external-ffi-bindings"]
keywords = ["isa-l", "isal", "ffi", "bindings"]
authors = ["Lokyin ZHAO <lokyinzhao.work@icloud.com>"]
exclude = ["vendor/isa-l/.git"]

[build-dependencies]
autotools = "0.2.7"
bindgen = "0.71.0"

[features]
default = ["bundle"]
# The bundle feature enables building the dependencies from source. Set by default.
bundle = ["link_static"]
# The link_static feature enables linking the dependencies statically.
link_static = []
