[package]
name = "erasure-isa-l-sys"
version = "1.0.2"
edition = "2024"
description = "FFI bindings to the isa-l library"
repository = "https://github.com/LokyinZHAO/erasure-isa-l-sys"
readme = "README.md"
license = "MIT"
categories = ["api-bindings", "external-ffi-bindings"]
keywords = ["isa-l", "isal", "ffi", "bindings"]
authors = ["Lokyin ZHAO <lokyinzhao.work@icloud.com>"]
exclude = ["vendor/isa-l/.git"]

[build-dependencies]
autotools = "0.2.7"
pkg-config = { version = "0.3.32", optional = true }
bindgen = "0.71.0"

[features]
default = ["from_system"]
# The bundle feature enables building the dependencies from source.
from_source = []
# The from_system feature enables using the system-installed dependencies.
from_system = ["pkg-config"]
# The link_static feature enables linking the dependencies statically.
# Default is dynamic linking.
# The link_static feature is only effective for `from_sys` feature,
# and when `from_source` feature is enabled, it will always link statically.
link_static = []
